ci: disable fuzz testing in OpenSSL build
Disable fuzz testing to reduce build time and dependencies since it's not needed for the AAR build.

--- a/.github/workflows/build-aar.yml
+++ b/.github/workflows/build-aar.yml
@@ -147,6 +147,7 @@ jobs:
               no-weak-ssl-ciphers \
               no-zlib \
               no-zlib-dynamic \
+              no-fuzz \
               --prefix=$PWD/install
             
             make -j$(nproc)
