ci: disable tests in AAR build workflow
The no-tests flag is added to the OpenSSL configuration to skip building test binaries, reducing build time and output size for the AAR artifact.

--- a/.github/workflows/build-aar.yml
+++ b/.github/workflows/build-aar.yml
@@ -143,6 +143,7 @@ jobs:
               no-shared \
               no-asm \
               no-zlib \
+              no-tests \
               --prefix=$PWD/install
             
             make -j$(nproc)
